--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/security6
-spring.datasource.username = root
-spring.datasource.password = 12345
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.profiles.active=mysql
 
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.database=mysql
-spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
